Remove vertical centering (caused issues on mobile when page took up too much vertical space

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 html {
- height:100%;
- min-height:100%;
+ height: 100%;
+ min-height: 100%;
 }
 
 body {
@@ -12,15 +12,15 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover; 
-  min-height:100%;
+  min-height: 100%;
+  width: 100%;
   margin: 0;
 }
 
 #container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  position: relative;
+  top: 2em;
+  margin: 0 auto;
   padding: 5px;
   width: 90%;
   max-width: 400px;
